--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <text x="102" y="28" style="font-size:x-large">T</text>
                 <text x="114" y="33" style="font-size:x-large">E</text>
                 <text x="126" y="28" style="font-size:x-large">X</text>
-                </svg></a> · <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">\(\rm PGFPlots\) 代码生成器</a> · 原型机
+                </svg></a> · <a href="https://github.com/LogCreative/PGFPlotsEdt" target="_blank">PGFPlots 代码生成器</a> · 原型机
             <div id="extlinks">
                 <div>
                     <a href="https://mirrors.rit.edu/CTAN/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf" target="_blank">PGFPlots 手册</a>
@@ -46,6 +46,7 @@
                     <input type="checkbox" onclick="pinClick(this)" v-model="enablepin">启用标注</input>
                     <input type="checkbox" v-model="td">启用三维参数</input>
                     <input type="checkbox" v-model="enableLegend">启用图例</input>
+                    <input type="checkbox" onclick="sourceClick(this)" v-model="enablesource">启用数据源</input>
                     <div>
                         <lib :id="1" category="tikz" chname="标记库" libname="plotmarks"></lib>
                         <lib :id="2" category="pgfplots" chname="颜色库" libname="colorbrewer"></lib>
@@ -60,13 +61,19 @@
                     <div id="addtooltip">
                         <button>+ 系列</button>
                         <div id="addbuttons">
-                            <button onclick="addexprClick()">\(\tiny f(x)\) 函数</button><br>
-                            <button onclick="addcoordClick()">\(\tiny (x,y)\) 坐标</button><br>
-                            <button onclick="addtableClick()">\(\tiny x~~y~~\)文件</button><br>
-                            <button onclick="addnodeClick()" v-show="enablepin">\(\tiny \rm abc~~\)标注</button>
+                            <div v-show="enablesource"><button onclick="addsourceClick()"> 表源</button></div>
+                            <div><button onclick="addexprClick()">\(\tiny f(x)\) 函数</button></div>
+                            <div><button onclick="addcoordClick()">\(\tiny (x,y)\) 坐标</button></div>
+                            <div><button onclick="addtableClick()">\(\tiny x~~y~~\)文件</button></div>
+                            <div v-show="enablepin"><button onclick="addnodeClick()">\(\tiny \rm abc~~\)标注</button></div>
                         </div>
                     </div>
                     <div id="series">
+                        <div id="sours" v-show="enablesource">
+                            <div v-for="comp in sources" :key="comp.innerId">
+                                <Tsource :id="comp.id"></Tsource>
+                            </div>
+                        </div>
                         <div id="exprs">
                             <div v-for="comp in expressions" :key="comp.innerId">
                                 <expression :id="comp.id" :ontd="td" :onlegend="enableLegend"></expression>
@@ -146,6 +153,25 @@
     </div>
     <template id="libtpl">
         <td><input type="checkbox" v-model="enabled" @change="onlibchange">{{chname}}</input></td>
+    </template>
+    <template id="sourcetpl">
+        <div v-show="enabled" class="seriesitem">
+            <div class="type" v-soutline="show">
+                <label>
+                    <div><input type="text" class="legend" placeholder="表源" v-model="sourceName" @keyup="on_change"></div>
+                     ({{idInner|addZero}})
+                    <input type="checkbox" class="showToggle" v-model="show" @click="onschange" title="显示图层">
+                </label>
+            </div>
+            <!-- <div><button class="upBut" @click="moveUp" title="置于顶层">↑</button></div> -->
+            <div><button class="deleteBut" @click="deleteComp" title="删除表源">🗑</button></div>
+            <!-- <div class="ytd">
+                <input type="checkbox" @click="ontdchange" v-model="etd" title="黄色标注">
+            </div>
+            <div><input type="text" class="param" v-model="param" @keyup="on_change" placeholder="旋转角度" v-show="etd"></div>
+            <div><input type="text" class="coord" v-model="pos" @keyup="on_change" placeholder="标注位置"></div> -->
+            <div><input type="file" id="files" class="fileChooser" @change="readFile"></div>
+        </div>
     </template>
     <template id="exprtpl">
         <div v-show="enabled" class="seriesitem">
