show and move up for source

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <input type="checkbox" class="showToggle" v-model="show" @click="onschange" title="显示图层">
                 </label>
             </div>
-            <!-- <div><button class="upBut" @click="moveUp" title="置于顶层">↑</button></div> -->
+            <div><button class="upBut" @click="moveUp" title="置于顶层">↑</button></div>
             <div><button class="deleteBut" @click="deleteComp" title="删除表源">🗑</button></div>
             <!-- <div class="ytd">
                 <input type="checkbox" @click="ontdchange" v-model="etd" title="黄色标注">
