--- a/index.html
+++ b/index.html
@@ -142,13 +142,10 @@
         </div> 
         <div id="panel-three" class="split">
             <div id="auto">
-            <button v-clipboard:copy="content">复制绘图代码</button>
-            <button v-clipboard:copy="file">复制全部代码</button>
-            <button onclick="gomanual()">手动编辑⚠</button>
-            <!-- <details open>
+            <details id="codedetail">
                 <summary>
                     代码
-                </summary> -->
+                </summary>
                 <div>
                 <textarea v-model="premable" readonly="readonly" style="min-height: 130px;"></textarea>
                 <textarea v-model="content" id="texContent" readonly="readonly" style="min-height: 200px;">\begin{axis}[{{param}}]
@@ -156,8 +153,10 @@
     \end{axis}</textarea>
                 <textarea v-model="suffix" readonly="readonly" style="min-height: 50px;"></textarea>
             </div>
-            <!-- </details> -->
-            
+            </details>
+            <button v-clipboard:copy="content">复制绘图代码</button>
+            <button v-clipboard:copy="file">复制全部代码</button>
+            <button onclick="gomanual()">手动编辑⚠</button>
         </div> 
         </div>
         
@@ -320,7 +319,10 @@
                 minSize: [300,300,0],
                 direction: 'horizontal',
             });
+            document.getElementById('codedetail').open = true;
         }
+        else 
+            document.getElementById('codedetail').open = false;
     </script>
 </body>
 </html>
