--- a/index.html
+++ b/index.html
@@ -165,18 +165,10 @@
     <template id="libtpl">
         <td><input type="checkbox" v-model="enabled" @change="onlibchange">{{chname}}</input></td>
     </template>
-    <template id="sourcetpl">
-        <div v-show="enabled" class="seriesitem">
-            <div class="type" v-soutline="show">
-                <label>
-                    <div><input type="text" class="legend" placeholder="表源" v-model="sourceName" @keyup="on_change" v-validate="sourceName"></div>
-                     ({{idInner|addZero}})
-                    <input type="checkbox" class="showToggle" v-model="show" @click="onschange" title="显示图层">
-                </label>
-            </div>
-            <div><button class="upBut" @click="moveUp" title="置于顶层">↑</button></div>
-            <div><button class="deleteBut" @click="deleteComp" title="删除表源">🗑</button></div>
-            <div><input type="file" id="files" class="fileChooser" @change="readFile"></div>
+    <template id="parambartpl">
+        <div class="parambar" style="display: block;">
+            <div class="title" style="display: block;">参数设置</div>
+            <div class="params">this is a parambar.this is a parambar.this is a parambar.this is a parambar.this is a parambar.this is a parambar.</div>
         </div>
     </template>
     <template id="exprtpl">
@@ -200,10 +192,17 @@
             <div class="ctd">
                 <input type="checkbox" @click="oncchange" v-model="cycle" title="循环面积">
             </div>
-            <div><input type="text" class="param" placeholder="参数" v-model="param" @keyup="on_change"></div>
+            <div><input type="text" class="param" placeholder="参数" v-model="param" @keyup="on_change" @focus="param_focused" @blur="param_losefocus"></div>
             <div><input type="text" class="coord" placeholder="函数式" v-model="expression" @keyup="on_change" v-minimize="etd"></div>
             <div v-show="etd"><input type="text" class="coord2" placeholder="y轴" v-model="expression2" @keyup="on_change"></div>
             <div v-show="etd"><input type="text" v-model="expression3" class="coord3" placeholder="z轴" @keyup="on_change"></div>
+            <parambar v-show="paramfoc" @click="param_focused"></parambar>
+        </div>
+    </template>
+    <template id="coordbartpl">
+        <div class="coordbar" style="display: block;">
+            <div class="title" style="display: block;">坐标数据</div>
+            this is a coordbar.
         </div>
     </template>
     <template id="coordtpl">
@@ -227,9 +226,31 @@
             <div class="ctd">
                 <input type="checkbox" @click="oncchange" v-model="cycle" title="循环面积">
             </div>
-            <div><input type="text" class="param" v-model="param" @keyup="on_change" placeholder="参数"></div>
+            <div><input type="text" class="param" v-model="param" @keyup="on_change" placeholder="参数" @focus="param_focused" @blur="param_losefocus"></div>
             <!-- <br> -->
-            <div><input type="text" class="coord" v-model="data" @keyup="on_change" placeholder="坐标数据"></div>
+            <div><input type="text" class="coord" v-model="data" @keyup="on_change" placeholder="坐标数据" @focus="coord_focused" @blur="coord_losefocus"></div>
+            <parambar v-show="paramfoc"></parambar>
+            <coordbar v-show="coordbar"></coordbar>
+        </div>
+    </template>
+    <template id="tableparamtpl">
+        <div class="tableparambar" style="display: block;">
+            <div class="title" style="display: block;">表格参数</div>
+            this is a tableparambar.
+        </div>
+    </template>
+    <template id="sourcetpl">
+        <div v-show="enabled" class="seriesitem">
+            <div class="type" v-soutline="show">
+                <label>
+                    <div><input type="text" class="legend" placeholder="表源" v-model="sourceName" @keyup="on_change" v-validate="sourceName"></div>
+                     ({{idInner|addZero}})
+                    <input type="checkbox" class="showToggle" v-model="show" @click="onschange" title="显示图层">
+                </label>
+            </div>
+            <div><button class="upBut" @click="moveUp" title="置于顶层">↑</button></div>
+            <div><button class="deleteBut" @click="deleteComp" title="删除表源">🗑</button></div>
+            <div><input type="file" id="files" class="fileChooser" @change="readFile"></div>
         </div>
     </template>
     <template id="tableptpl">
@@ -253,8 +274,8 @@
             <div class="ctd">
                 <input type="checkbox" @click="oncchange" v-model="cycle" title="循环面积">
             </div>
-            <div><input type="text" class="param" v-model="param" @keyup="on_change" placeholder="参数"></div>
-            <div><input type="text" class="param" v-model="tableparam" @keyup="on_change" placeholder="表参数"></div>
+            <div><input type="text" class="param" v-model="param" @keyup="on_change" placeholder="参数"  @focus="param_focused" @blur="param_losefocus"></div>
+            <div><input type="text" class="coord" v-model="tableparam" @keyup="on_change" placeholder="表参数" @focus="tableparam_focused" @blur="tableparam_losefocus"></div>
             <div v-show="enablesource">
                 <select v-model="sourceSelect" @change="on_change">
                     <option v-for="opt in sourceNameList" :value="opt" v-show="opt!=null">{{opt}}</option>
@@ -265,6 +286,8 @@
                 <div><input type="text" class="coord" v-model="datat" @keyup="on_change" placeholder="数据表" style="display:none"></div>
                 <div><input type="file" id="files" class="fileChooser" @change="readFile"></div>
             </div>
+            <parambar v-show="paramfoc"></parambar>
+            <tableparambar v-show="tableparambar"></tableparambar>
         </div>
     </template>
     <template id="nodetpl">
@@ -306,7 +329,6 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/split.js/1.6.2/split.min.js"></script>
     <script src="main.js"></script>
     <script src="directive_cn.js"></script>
-    <!-- <script src="js/drag.js"></script> -->
     <script>
         if(document.body.clientWidth>900){
             // 启用split
@@ -316,7 +338,7 @@
                 sps[i].style.height = '575px';
             }
             Split(['#panel-one','#panel-two','#panel-three'],{
-                minSize: [300,300,0],
+                minSize: [300,380,0],
                 direction: 'horizontal',
             });
             document.getElementById('codedetail').open = true;
