--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <template id="parambartpl">
         <div class="parambar" style="display: block;">
             <div class="title" style="display: block;">参数设置</div>
-            <div class="params">this is a parambar.this is a parambar.this is a parambar.this is a parambar.this is a parambar.this is a parambar.</div>
+            <div class="params">描述图形的相关参数。</div>
         </div>
     </template>
     <template id="exprtpl">
@@ -202,7 +202,7 @@
     <template id="coordbartpl">
         <div class="coordbar" style="display: block;">
             <div class="title" style="display: block;">坐标数据</div>
-            this is a coordbar.
+            坐标数据诸如 (x1,y1) (x2,y2) (x3,y3)
         </div>
     </template>
     <template id="coordtpl">
@@ -236,7 +236,7 @@
     <template id="tableparamtpl">
         <div class="tableparambar" style="display: block;">
             <div class="title" style="display: block;">表格参数</div>
-            this is a tableparambar.
+            表格参数用于指定读取列，例如 x=tab1, y=tab2。
         </div>
     </template>
     <template id="sourcetpl">
