--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <template id="parambartpl">
         <div class="parambar" style="display: block;">
             <div class="title" style="display: block;">参数设置</div>
-            <div class="params">描述图形的相关参数。</div>
+            <div class="params">描述图形的相关参数。{{matchedCommands}} {{submenu}}</div>
         </div>
     </template>
     <template id="exprtpl">
@@ -192,11 +192,11 @@
             <div class="ctd">
                 <input type="checkbox" @click="oncchange" v-model="cycle" title="循环面积">
             </div>
-            <div><input type="text" class="param" placeholder="参数" v-model="param" @keyup="on_change" @focus="param_focused" @blur="param_losefocus"></div>
+            <div><input type="text" class="param" placeholder="参数" v-model="param" @keyup="onpchange" @focus="param_focused" @blur="param_losefocus"></div>
             <div><input type="text" class="coord" placeholder="函数式" v-model="expression" @keyup="on_change" v-minimize="etd"></div>
             <div v-show="etd"><input type="text" class="coord2" placeholder="y轴" v-model="expression2" @keyup="on_change"></div>
             <div v-show="etd"><input type="text" v-model="expression3" class="coord3" placeholder="z轴" @keyup="on_change"></div>
-            <parambar v-show="paramfoc" @click="param_focused"></parambar>
+            <parambar v-show="paramfoc" @click="param_focused" :command="command"></parambar>
         </div>
     </template>
     <template id="coordbartpl">
@@ -226,10 +226,10 @@
             <div class="ctd">
                 <input type="checkbox" @click="oncchange" v-model="cycle" title="循环面积">
             </div>
-            <div><input type="text" class="param" v-model="param" @keyup="on_change" placeholder="参数" @focus="param_focused" @blur="param_losefocus"></div>
+            <div><input type="text" class="param" v-model="param" @keyup="onpchange" placeholder="参数" @focus="param_focused" @blur="param_losefocus"></div>
             <!-- <br> -->
             <div><input type="text" class="coord" v-model="data" @keyup="on_change" placeholder="坐标数据" @focus="coord_focused" @blur="coord_losefocus"></div>
-            <parambar v-show="paramfoc"></parambar>
+            <parambar v-show="paramfoc" :command="command"></parambar>
             <coordbar v-show="coordbar"></coordbar>
         </div>
     </template>
@@ -274,7 +274,7 @@
             <div class="ctd">
                 <input type="checkbox" @click="oncchange" v-model="cycle" title="循环面积">
             </div>
-            <div><input type="text" class="param" v-model="param" @keyup="on_change" placeholder="参数"  @focus="param_focused" @blur="param_losefocus"></div>
+            <div><input type="text" class="param" v-model="param" @keyup="onpchange" placeholder="参数"  @focus="param_focused" @blur="param_losefocus"></div>
             <div><input type="text" class="coord" v-model="tableparam" @keyup="on_change" placeholder="表参数" @focus="tableparam_focused" @blur="tableparam_losefocus"></div>
             <div v-show="enablesource">
                 <select v-model="sourceSelect" @change="on_change">
@@ -286,7 +286,7 @@
                 <div><input type="text" class="coord" v-model="datat" @keyup="on_change" placeholder="数据表" style="display:none"></div>
                 <div><input type="file" id="files" class="fileChooser" @change="readFile"></div>
             </div>
-            <parambar v-show="paramfoc"></parambar>
+            <parambar v-show="paramfoc" :command="command"></parambar>
             <tableparambar v-show="tableparambar"></tableparambar>
         </div>
     </template>
@@ -327,8 +327,8 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.11/vue.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/vue-clipboard2/0.3.1/vue-clipboard.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/split.js/1.6.2/split.min.js"></script>
+    <script src="lang/directive_cn.js"></script>
     <script src="main.js"></script>
-    <script src="directive_cn.js"></script>
     <script>
         if(document.body.clientWidth>900){
             // 启用split
@@ -337,10 +337,11 @@
                 sps[i].style.float = 'left';
                 sps[i].style.height = '575px';
             }
-            Split(['#panel-one','#panel-two','#panel-three'],{
+            var instance = Split(['#panel-one','#panel-two','#panel-three'],{
                 minSize: [300,380,0],
                 direction: 'horizontal',
             });
+            instance.collapse(0);
             document.getElementById('codedetail').open = true;
         }
         else 
