--- a/index.html
+++ b/index.html
@@ -175,9 +175,7 @@
                     </div>
                 </div>
                 <div v-for="(value,key,index) in submenu" v-show="eq">
-                    <tr>
-                        <td>{{key}}</td><td>{{value}}</td>
-                    </tr><br>
+                    <div class="matchkey">{{key}}</div><div class="matchnote">{{value}}</div>
                 </div>
             </div>
         </div>
