--- a/index.html
+++ b/index.html
@@ -85,10 +85,11 @@
                     <input type="checkbox" v-model="enableLegend">启用图例</input>
                     <input type="checkbox" onclick="sourceClick(this)" v-model="enablesource">启用数据源</input>
                     <div>
-                        <lib :id="1" category="tikz" chname="标记库" libname="plotmarks"></lib>
-                        <lib :id="2" category="pgfplots" chname="颜色库" libname="colorbrewer"></lib>
-                        <lib :id="3" category="pgfplots" chname="统计库" libname="statistics"></lib>
-                        <lib :id="4" category="pgfplots" chname="间隙填充库" libname="fillbetween"></lib>
+                        <lib :id="1" category="tikz" chname="标记库" libname="plotmarks" customized="0"></lib>
+                        <lib :id="2" category="pgfplots" chname="颜色库" libname="colorbrewer" customized="0"></lib>
+                        <lib category="selectcolormodel" chname="CMYK模式" libname="cmyk" customized="1"></lib>
+                        <lib :id="4" category="pgfplots" chname="统计库" libname="statistics" customized="0"></lib>
+                        <lib :id="5" category="pgfplots" chname="间隙填充库" libname="fillbetween" customized="0"></lib>
                     </div>
                 </details>
                 <details open="true">
