--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
     </template>
     <template id="parambartpl">
         <div class="parambar" style="display: block;">
-            <div class="title" style="display: block;">参数设置</div>
+            <div class="title" style="display: block;">
+                参数设置
+                <div v-show="bestMatch[0]!='no'"><div class="matchkey">{{bestMatch[0]}}</div><div class="matchnote">{{bestMatch[1][0]}}</div><div class="matchside" v-show="bestMatch[2]">=...</div></div>
+            </div>
             <div class="notes">
                 <div v-for="(value,key,index) in matchedCommands" v-show="!eq">
                     <div style="display: block;">
