--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                         坐标系
                     </summary>
                     <div id="axis">
-                        <tr><td>增补参数</td><td><input type="text" v-model="surplusparam" placeholder="参数"></input></td></tr><br>
+                        <!-- <tr><td>增补参数</td><td><input type="text" v-model="surplusparam" placeholder="参数"></input></td></tr><br><parambar v-show="paramfoc" :command="surplusparam" :etd="td"></parambar> -->
+                        <surplus :id="0" :ontd="td" :onlegend="enableLegend"></surplus>
                         <tr><td>坐标轴类型</td>
                             <td>
                                 <select v-model="axistype">
@@ -54,10 +55,11 @@
                                 </select>
                             </td>
                         </tr>
+                            <property chname="标题" propkey="title"></property>
                             <property chname="宽度" propkey="width"></property>    
                             <property chname="高度" propkey="height"></property>
                             <propertyselect chname="字号" propkey="font" :options="['\\tiny','\\scriptsize','\\footnotesize','\\small','\\normalsize','\\large','\\Large','\\LARGE','\\huge','\\Huge']"></propertyselect>    
-                            <property chname="标题" propkey="title"></property>
+                            <propertyselect chname="网格" propkey="grid" :options="['major','minor','both','none']"></propertyselect> 
                         <div v-show="enableLegend">
                             <propertyselect chname="图例位置" propkey="legend pos" :options="['south west','south east','north west','north east','outer north east']"></propertyselect>    
                         </div>
@@ -219,7 +221,7 @@
             <div><input type="text" class="coord" placeholder="函数式" v-model="expression" @keyup="on_change" v-minimize="etd"></div>
             <div v-show="etd"><input type="text" class="coord2" placeholder="y轴" v-model="expression2" @keyup="on_change"></div>
             <div v-show="etd"><input type="text" v-model="expression3" class="coord3" placeholder="z轴" @keyup="on_change"></div>
-            <parambar v-show="paramfoc" @click="param_focused" :command="command" :etd="etd"></parambar>
+            <parambar v-show="paramfoc" @click="param_focused" :command="command" :etd="etd" :global="false"></parambar>
         </div>
     </template>
     <template id="coordbartpl">
@@ -252,7 +254,7 @@
             <div><input type="text" class="param" v-model="param" @keyup="onpachange" placeholder="参数" @focus="param_focused" @blur="param_losefocus"></div>
             <!-- <br> -->
             <div><input type="text" class="coord" v-model="data" @keyup="on_change" placeholder="坐标数据" @focus="coord_focused" @blur="coord_losefocus"></div>
-            <parambar v-show="paramfoc" :command="command" :etd="etd"></parambar>
+            <parambar v-show="paramfoc" :command="command" :etd="etd" :global="false"></parambar>
             <coordbar v-show="coordbar"></coordbar>
         </div>
     </template>
@@ -309,7 +311,7 @@
                 <div style="display:none"><input type="text" class="coord" v-model="datat" @keyup="on_change" placeholder="数据表"></div>
                 <div style="display: inline-block; margin-left: -10px;"><input type="file" id="files" class="fileChooser" @change="readFile"></div>
             </div>
-            <parambar v-show="paramfoc" :command="command" :etd="etd"></parambar>
+            <parambar v-show="paramfoc" :command="command" :etd="etd" :global="false"></parambar>
             <tableparambar v-show="tableparambar"></tableparambar>
         </div>
     </template>
@@ -346,6 +348,15 @@
             <td>{{chname}}</td>
             <td style="display:none">{{propkey}}</td><td><input type="text" v-model="value" @keyup="on_change"></td>
         </tr>
+    </template>
+    <template id="surplustpl">
+        <div>
+            <tr>
+                <td>增补参数</td>
+                <td><input type="text" class="param" v-model="param" @keyup="onpachange" placeholder="参数"  @focus="param_focused" @blur="param_losefocus"></td>
+            </tr>
+            <parambar :global="true" v-show="paramfoc" :command="command" :etd="ontd"></parambar>
+        </div>        
     </template>
     <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.11/vue.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/vue-clipboard2/0.3.1/vue-clipboard.js"></script>
